--- a/TAMPUNGAN/package.json
+++ b/TAMPUNGAN/package.json
@@ -25,12 +25,14 @@
   },
   "homepage": "https://github.com/humble-fox-sound-sky/server#readme",
   "dependencies": {
+    "@google-cloud/storage": "^3.2.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.0"
+    "mongoose": "^5.7.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0"
